--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -2,8 +2,9 @@
 name: Metrics
 on:
   # Schedule updates every Saturday at midnight UTC
+  # CRON FIELDS: minute hour day-of-month month day-of-week (0=SUN 6=SAT)
   # schedule: [{cron: "0 0 * * 6"}]
-  schedule: [{cron: "0 13 * * *"}]
+  schedule: [{cron: "15 13 * * *"}]
   # (optional) Run workflow manually
   workflow_dispatch:
   # (optional) Run workflow when pushing on master/main
@@ -17,7 +18,7 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          user: mfnalex
+          user: traveltimn
           config_timezone: Europe/Dublin
           plugin_languages: yes
           plugin_isocalendar: yes
