Change metrics workflow schedule to weekly
Updated the schedule to run metrics workflow every Saturday at midnight UTC.

--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -3,8 +3,7 @@ name: Metrics
 on:
   # Schedule updates every Saturday at midnight UTC
   # CRON FIELDS: minute hour day-of-month month day-of-week (0=SUN 6=SAT)
-  # schedule: [{cron: "0 0 * * 6"}]
-  schedule: [{cron: "15 13 * * *"}]
+  schedule: [{cron: "0 0 * * 6"}]
   # (optional) Run workflow manually
   workflow_dispatch:
   # (optional) Run workflow when pushing on master/main
